@@ -13,21 +13,25 @@ use Moose::Autobox;
 # add a set of attributes to hold the repo information
 has zilla =>
   (is => 'rw', isa => 'Dist::Zilla', handles => [ 'name', 'distmeta' ]);
-has [qw(homepage_url cpan_url repo_type repo_url repo_web)] =>
+has [qw(homepage_url cpan_url repo_type repo_url)] =>
   (is => 'rw', isa => 'Str', lazy_build => 1);
+has repo_web => (is => 'rw', lazy_build => 1);
 has is_github => (is => 'rw', isa => 'Bool', lazy_build => 1);
 
 sub weave_section {
     my ($self, $document, $input) = @_;
     $self->zilla($input->{zilla});
+    my @pod = ($self->_homepage_pod, $self->_cpan_pod);
+
+    # Non-github repos may not have a repo web URL
+    if ($self->repo_web) {
+        push @pod, $self->_development_pod;
+    }
     $document->children->push(
         Pod::Elemental::Element::Nested->new(
             {   command  => 'head1',
                 content  => 'AVAILABILITY',
-                children => [
-                    $self->_homepage_pod, $self->_cpan_pod,
-                    $self->_development_pod,
-                ],
+                children => \@pod,
             }
         ),
     );
