@@ -1,6 +1,8 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+    - repo_web is optional; we can only determine the URL for github repos. If
+      undef, we don't include the relevant POD.
 
 1.102460  2010-09-03 12:03:54 Europe/Vienna
     - separated from Pod-Weaver-PluginBundle-MARCEL with changes from nigelm
